apps/templates/old-ssmi-website/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: old-ssmi-website
  namespace: apps
  labels:
    app.kubernetes.io/name: old-ssmi-website
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: old-ssmi-website
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: old-ssmi-website
    spec:
      containers:
        - name: laravel
          image: ghcr.io/societatea-hermes/hermes-old-ssmi-website:5
          ports:
            - containerPort: 8000
