apps/templates/old-ssmi-website/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: apps
  labels:
    app.kubernetes.io/name: old-ssmi-website
  name: old-ssmi-website
spec:
  ports:
    - port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    app.kubernetes.io/name: old-ssmi-website
