apps/templates/old-ssmi-website/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ssmi-ingress
  namespace: apps
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    traefik.ingress.kubernetes.io/router.middlewares: apps-https-redirect@kubernetescrd
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - secretName: tls-ssmi
    hosts:
      - "ssmi.societateahermes.ro"
      - "ssmi.societatea-hermes.ro"
  rules:
  - host: "ssmi.societatea-hermes.ro"
    http:
      paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: old-ssmi-website
              port:
                number: 8000
  - host: "ssmi.societateahermes.ro"
    http:
      paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: old-ssmi-website
              port:
                number: 8000
